<resources>
    <string name="app_name">UPT Schedules</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="preference_file_key">SharedPreference.txt</string>
    <string name="welcome_greeting">"Hi there!"</string>
    <string name="sign_in">"To sign in or register, just click below"</string>
    <string name="password_delete_account_msg">Enter your password to delete your account</string>
    <string name="delete_account_msg">Delete Account</string>
    <string name="change_password_msg">Change Password</string>
    <string name="confirm_new_password_msg">Confirm New Password</string>
    <string name="new_password_msg">New Password</string>
    <string name="change_password_btn">CHANGE PASSWORD</string>
    <string name="delete_btn">DELETE</string>
    <string name="old_password_msg">Old Password</string>
    <string name="confirm_btn_msg">Confirm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
